errore render.txt
==> It looks like we don't have access to your repo, but we'll try to clone it anyway.
==> Cloning from https://github.com/Amin-tech99/Sanad-mauriAI
==> Checking out commit 0e048912cc6aa2bd6a47bf379e0671a49bb94ab5 in branch main
==> Requesting Node.js version >=20
==> Using Node.js version 24.4.1 via /opt/render/project/src/package.json
==> Docs on specifying a Node.js version: https://render.com/docs/node-version
==> Using Bun version 1.1.0 (default)
==> Docs on specifying a Bun version: https://render.com/docs/bun-version
==> Running build command 'npm ci && npm run build'...
added 569 packages, and audited 570 packages in 8s
61 packages are looking for funding
  run `npm fund` for details
10 vulnerabilities (3 low, 7 moderate)
To address issues that do not require attention, run:
  npm audit fix
To address all issues (including breaking changes), run:
  npm audit fix --force
Run `npm audit` for details.
> rest-express@1.0.0 build
> vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist
vite v5.4.19 building for production...
transforming...
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^
[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: /opt/render/project/src/client): [Error] Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- /opt/render/project/src/postcss.config.js
(@/opt/render/project/src/postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'autoprefixer'
Require stack:
- /opt/render/project/src/postcss.config.js
(@/opt/render/project/src/postcss.config.js)
    at load (file:///opt/render/project/src/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33632:11)
    at file:///opt/render/project/src/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///opt/render/project/src/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33656:8)
    at processResult (file:///opt/render/project/src/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33726:14)
    at file:///opt/render/project/src/node_modules/vite/dist/node/chunks/dep-C6uTJdX2.js:33856:14]
Node.js v24.4.1
==> Build failed 😞
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys